<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_browse"
        android:icon="@drawable/ic_play"
        android:title="@string/browse" />
    
    <item
        android:id="@+id/nav_my_list"
        android:icon="@drawable/ic_empty_list"
        android:title="@string/my_list" />
    
    <item
        android:id="@+id/nav_downloads"
        android:icon="@drawable/ic_download"
        android:title="@string/downloads" />
    
    <item
        android:id="@+id/nav_mesh"
        android:icon="@drawable/ic_mesh"
        android:title="@string/mesh_network" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_default"
        android:title="@string/profile" />
</menu>